--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+version 1.5.2
+====================
+- Add title script 
+
 version 1.5.1
 ====================
 - Fixing path for loading environment in ruby installation (install_ruby.sh)
